[gd_scene load_steps=7 format=3 uid="uid://djvg6hknx1v25"]

[ext_resource type="Texture2D" uid="uid://duiy5x8u0hr7r" path="res://Assets/Sprites/background.png" id="1_1r6ip"]
[ext_resource type="Script" uid="uid://nwffscdu4532" path="res://Scenes/Main/main.gd" id="1_qw60k"]
[ext_resource type="PackedScene" uid="uid://yi1qq25g2kqj" path="res://Scenes/Player/player.tscn" id="2_lixft"]
[ext_resource type="PackedScene" uid="uid://cw4ycnfy2haik" path="res://Scenes/Extras/spawner.tscn" id="4_5yls4"]
[ext_resource type="PackedScene" uid="uid://b7tuwfna658we" path="res://Scenes/Ground/ground.tscn" id="5_p6jpk"]
[ext_resource type="PackedScene" uid="uid://cngn0vkvtcage" path="res://Scenes/GameUI/game_ui.tscn" id="6_2a143"]

[node name="Main" type="Node2D"]
script = ExtResource("1_qw60k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -46)
scale = Vector2(2, 2)
texture = ExtResource("1_1r6ip")
centered = false

[node name="Player" parent="." instance=ExtResource("2_lixft")]
position = Vector2(222, 367)

[node name="Spawner" parent="." instance=ExtResource("4_5yls4")]

[node name="Ground" parent="." instance=ExtResource("5_p6jpk")]
position = Vector2(0, 819)

[node name="GameUI" parent="." instance=ExtResource("6_2a143")]

[connection signal="on_game_started" from="Player" to="." method="_on_player_on_game_started"]
[connection signal="on_obstacle_crashed" from="Spawner" to="." method="_on_spawner_on_obstacle_crashed"]
[connection signal="on_player_score" from="Spawner" to="." method="_on_spawner_on_player_score"]
[connection signal="on_player_crashed" from="Ground" to="." method="_on_ground_on_player_crashed"]
